force-app/main/default/objects/Case/fields/Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Reason__c</fullName>
    <label>Closed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Documents Missing</fullName>
            </value>
            <value>
                <fullName>Unauthorized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>