force-app/main/default/objects/Case/fields/DemoField__c.field-meta.xml
<CustomField>
    <fullName>DemoField__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DemoField_Test</label>
    <type>Checkbox</type>
</CustomField>