force-app/main/default/objects/Case/fields/Document_uploaded__c.field-meta.xml
<CustomField>
    <fullName>Document_uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The field will be checked when uploading documents.</description>
    <label>Document uploaded</label>
    <type>Checkbox</type>
</CustomField>