force-app/main/default/objects/Case/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Documents_Missing</fullName>
                <label>Documents Missing</label>
            </value>
            <value>
                <fullName>Unauthorized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>