force-app/main/default/objects/Case/recordTypes/Authorization_checks.recordType-meta.xml
<RecordType>
    <fullName>Authorization_checks</fullName>
    <active>true</active>
    <businessProcess>Authorization checks</businessProcess>
    <label>Authorization checks</label>
</RecordType>