force-app/main/default/objects/Case/validationRules/Reason_required_when_case_closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_required_when_case_closed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status, &quot;Rejected&quot;),
    ISBLANK(TEXT( Closed_Reason__c ))
)</errorConditionFormula>
    <errorDisplayField>Closed_Reason__c</errorDisplayField>
    <errorMessage>Closed Reason is required when Case is Closed.</errorMessage>
</ValidationRule>