force-app/main/default/objects/Case/validationRules/Reason_required_when_case_rejected.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_required_when_case_rejected</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISBLANK(TEXT( Rejection_Reason__c )),
    ISPICKVAL(Status, &quot;Rejected&quot;)
)</errorConditionFormula>
    <errorDisplayField>Rejection_Reason__c</errorDisplayField>
    <errorMessage>Rejection reason is required when the Case is Rejected.</errorMessage>
</ValidationRule>