force-app/main/default/objects/Case/listViews/Bank_Approvers_Level_1_Case.listView-meta.xml
<ListView>
    <fullName>Bank_Approvers_Level_1_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Bank Approvers Level 1</label>
    <queue>Bank_Approvers_Level_1</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>