force-app/main/default/objects/Case/listViews/Manage_Bank_Accounts_Case.listView-meta.xml
<ListView>
    <fullName>Manage_Bank_Accounts_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Manage Bank Accounts</label>
    <queue>Manage_Bank_Accounts</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>